--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import url(https://www.w3schools.com/w3css/4/w3.css);
+@import url(https://fonts.googleapis.com/icon?family=Material+Icons);
+
+app-root {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+app-courses-list {
+  flex-grow: 1;
+}
+
+.material-icons {
+  vertical-align: -25%
+}
