--- a/src/app/courses/courses-list-item/courses-list-item.component.html
+++ b/src/app/courses/courses-list-item/courses-list-item.component.html
@@ -1,6 +1,6 @@
 <div class="row w3-animate-opacity course-item">
   <div class="col-12">
-    <div class="course-list-item mb-4 w3-white border w3-hover-shadow w3-hover-light-gray">
+    <div class="course-list-item mb-4 w3-white w3-hover-shadow w3-hover-light-gray">
       <div class="row p-2">
         <div class="col-11">
           <div class="d-flex">
@@ -25,13 +25,13 @@
           <div class="btn-group-vertical ml-auto">
             <button
               (click)="edit()"
-              class="w3-button"
+              class="w3-button edit-button"
             >
               <i class="material-icons">edit</i>
             </button>
             <button
               (click)="delete()"
-              class="w3-button"
+              class="w3-button delete-button"
             >
               <i class="material-icons">delete</i>
             </button>
