--- a/src/app/courses/courses-list-item/courses-list-item.component.css
+++ b/src/app/courses/courses-list-item/courses-list-item.component.css
@@ -2,3 +2,14 @@
   border: 1px solid #dee2e6;
   cursor: pointer;
 }
+
+.rating-icon {
+  display: inline-block;
+  font-size: 16px;
+  line-height: 25px;
+  margin-left: 8px;
+}
+
+.fa-star {
+  color: #ffca1b;
+}
