--- a/src/app/courses/courses-list/courses-list.component.css
+++ b/src/app/courses/courses-list/courses-list.component.css
@@ -2,3 +2,12 @@
   width: 300px;
   max-width: 70%;
 }
+
+.courses-list--empty {
+  display: flex;
+  width: 100%;
+  height: 300px;
+  justify-content: center;
+  align-items: center;
+  color: #2196F3;
+}
