--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import url(https://www.w3schools.com/w3css/4/w3.css);
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
+@import url(https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
 
 app-root {
   display: flex;
